[package]
name = "Confined_Collector"
version = "0.8.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for all targets go here.
[dependencies]
bevy = "0.8.1"
bevy_egui = "0.16.1"
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", features = ["png"] }